[tool.poetry]
name = "helpex"
version = "0.1.0"
description = "Write and display documentation for user-defined shell functions"
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
