[tool.poetry]
name = "helpex"
version = "0.3.0"
description = "Write and display documentation for user-defined shell functions"
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
platformdirs = "^4.2.2"
pyyaml = "^6.0.1"
tabulate = "^0.9.0"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
packaging = "^24.1"

[tool.poetry.scripts]
helpex = "helpex.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
